# msa-director-project

./: .gitignore  .vercelignore  00_START_HERE.md  CONTEXT.md  DECISIONS.md  ESSAY_MATERIAL.md  MASTER_PLAN.md  PHASE1_PROMPT.md  PROMPT_ONBOARDING.md  README.md  REQUIREMENTS.md  RUNBOOK.md  SPEC.md  VALIDATION_PROMPT.md  VISION.md  directors-assistant-sketch.jsx  pyproject.toml  vercel.json
.claude/: launch.json  settings.local.json
api/: chat.py
app/: index.html  server.py
docs/: index.html
essays/: ESSAY1_COMMUNITY_IMPACT.md  ESSAY2_SETBACK_LEARNING.md
testing/: FEEDBACK_FORM.md  SESSION_GUIDE.md
